# stalking

./: ARCHITECTURE.md  Cargo.toml  example_config.toml
src/: agent.rs  config.rs  main.rs  model.rs  ssh.rs
src/monitor/: cpu.rs  disk.rs  mem.rs  mod.rs  net.rs
src/tests/: mod.rs
src/ui/: mod.rs  plain.rs  tui.rs
