[package]
name = "stalking"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
async-ssh2-tokio = "0.10.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
